--- a/project_2/css/styles.css
+++ b/project_2/css/styles.css
@@ -36,7 +36,9 @@ body {
        background-color: lightblue;
        box-shadow: 10px 10px 5px #888888;
      }
-
+h3 {
+  color: blue;
+}
 /* media queries*/
      @media screen and (min-width: 768px) {
   header {
