--- a/project_2/css/styles.css
+++ b/project_2/css/styles.css
@@ -5,10 +5,7 @@ body {
 			 padding: 0 35px;
 
      }
-		 img {
-		   width: 300px;
-		   height: 250px;
-		 }
+
      /* nav */
     		 .main-nav {
     		 margin-top: 5px;
@@ -22,7 +19,9 @@ body {
            background-color: lightblue;
            font-weight: bold;
          }
-
+img {
+  width: 100%;
+}
          * {
      box-sizing: border-box;
      }
@@ -32,20 +31,51 @@ body {
      h1 {
        font-size: 30px;
      }
-     section {
+     .section {
        background-color: lightblue;
-       box-shadow: 10px 10px 5px #888888;
      }
 h3 {
   color: blue;
 }
 /* media queries*/
+
+@media screen and (max-width : 320px)
+
+ {
+   header {
+     width: auto;
+     height: 300px;
+   }
+ }
+
+
+   h1 {
+       width: 400px;
+       text-align: left;
+       font-size: 30px;
+       margin-top: 10px;
+       margin-left: 40px;
+     }
+     .section {
+       max-width: 100% !important;
+       padding: 0px 5px 0px 5px;
+       float: none;
+       text-align: center;
+       display: block;
+     }
+     .clearfix::after {
+         content: "";
+         clear: both;
+         display: table;
+
      @media screen and (min-width: 768px) {
   header {
     height: 325px;
   }
-  }
+}
+
   .main-nav {
+  width: auto;
   align-content: center;
   text-align: center;
 }
@@ -59,7 +89,8 @@ h3 {
     float: right;
     width: 250px;
   }
-  .pic1, .pic2, .pic3, .pic4, .pic5, .pic6 {
+  .col {
+
       width: 50%;
       height: 400px;
       float: left;
@@ -69,11 +100,16 @@ h3 {
       padding-top: 50px;
       margin-top: auto;
     }
-
+.portfolio {
+  float:left !important;
+}
     @media screen and (min-width: 1024px) {
         header {
         height: 350px;
       }
+      }
+      .portfolio {
+        float:left !important;
       }
       .main-nav {
           float: right;
@@ -90,7 +126,7 @@ h3 {
              float: right;
              width: 300px;
            }
-        .pic1, .pic2, .pic3, .pic4, .pic5, .pic6 {
+        .col {
        width: 30%;
        height: 450px;
        float: left;
