--- a/project_2/css/styles.css
+++ b/project_2/css/styles.css
@@ -1,3 +1,15 @@
+.article {
+  float: left;
+  margin: 50px;
+  padding: 5px;
+  width: 300px;
+  height: 300px;
+  margin-bottom: 85px;
+}
+img {
+width:100%;
+
+}
 body {
        font-family: 'Roboto', sans-serif;
        font-size: 20px;
@@ -37,8 +49,13 @@ img {
 h3 {
   color: blue;
 }
+.skills {
+  padding-top: 20px;
+  margin-top: 20px;
+  background-color: lightblue;
+  border-radius: 20px;
+}
 /* media queries*/
-
 @media screen and (max-width : 320px)
 
  {
@@ -47,28 +64,10 @@ h3 {
      height: 300px;
    }
  }
-
-
-   h1 {
-       width: 400px;
-       text-align: left;
-       font-size: 30px;
-       margin-top: 10px;
-       margin-left: 40px;
-     }
-     .section {
-       max-width: 100% !important;
-       padding: 0px 5px 0px 5px;
-       float: none;
-       text-align: center;
-       display: block;
-     }
-     .clearfix::after {
-         content: "";
-         clear: both;
-         display: table;
-
-     @media screen and (min-width: 768px) {
+img {
+  width: 50%;
+}
+@media screen and (min-width: 768px) {
   header {
     height: 325px;
   }
@@ -94,6 +93,7 @@ h3 {
       width: 50%;
       height: 400px;
       float: left;
+      padding: 50px;
     }
     .skills {
       clear:both;
@@ -103,51 +103,57 @@ h3 {
 .portfolio {
   float:left !important;
 }
-    @media screen and (min-width: 1024px) {
-        header {
-        height: 350px;
-      }
-      }
-      .portfolio {
-        float:left !important;
-      }
-      .main-nav {
-          float: right;
-          text-align: center;
-          position: absolute;
-          top: 3%;
-          right: 3%;
-        }
-        .main-nav li {
-            display: inline-block;
-            text-align: center;
-          }
-          .profile {
-             float: right;
-             width: 300px;
-           }
-        .col {
-       width: 30%;
-       height: 450px;
-       float: left;
-       text-align: center;
-       padding-left: 20px;
+
+
+@media screen and (min-width: 1024px) {
+       header {
+       height: 350px;
      }
-     .skills {
-         clear: both;
-         padding-top: 50px;
+     }
+     img {
+       width: 100%;
+     }
+     .portfolio {
+       float:left !important;
+     }
+     .main-nav {
+         float: right;
          text-align: center;
-         margin-top: 20px;
+         position: absolute;
+         top: 3%;
+         right: 3%;
        }
-       .contact-div {
-         text-align: center;
-       }
+       .main-nav li {
+           display: inline-block;
+           text-align: center;
+         }
+         .profile {
+            float: right;
+            width: 300px;
+          }
+       .col {
+      width: 30%;
+      height: 450px;
+      float: left;
+      text-align: center;
+      padding-left: 20px;
+      padding: 50px;
+    }
+    .skills {
+        clear: both;
+        padding-top: 50px;
+        text-align: center;
+        margin-top: 20px;
+      }
+      .contact-div {
+        text-align: center;
+      }
 .end-name {
-  text-align: left;
+ text-align: left;
 }
 .footer-lrg {
-      text-align: right;
+     text-align: right;
 }
 .footer-sm {
-  visibility: hidden;
+ visibility: hidden;
 }
