--- a/project_2/css/styles.css
+++ b/project_2/css/styles.css
@@ -6,6 +6,9 @@
   height: 300px;
   margin-bottom: 85px;
 }
+nav {
+  text-align: center;
+}
 img {
 width:100%;
 
@@ -89,7 +92,6 @@ h3 {
   header {
     height: 325px;
   }
-
 
   .main-nav {
     display: inline-flex;
