--- a/project_2/css/styles.css
+++ b/project_2/css/styles.css
@@ -16,7 +16,6 @@ nav {
 }
 img {
 width:100%;
-
 }
 body {
        font-family: 'Roboto', sans-serif;
@@ -72,7 +71,6 @@ h3 {
 }
 .skills {
   text-align: center;
-
   padding-top: 20px;
   margin-top: 20px;
   clear:both;
@@ -135,7 +133,7 @@ h3 {
   float:right;
 
 }
-
+}
 
 @media screen and (min-width: 1024px) {
        header {
