--- a/project_2/css/styles.css
+++ b/project_2/css/styles.css
@@ -1,12 +1,15 @@
 .article {
-  float: left;
-  margin: 50px;
+  display:inline-block;
+  margin: 50px auto;
   padding: 5px;
   width: 300px;
   height: 300px;
   margin-bottom: 85px;
 }
-
+.article-wrap {
+  max-width: 1100px;
+  margin:auto;
+}
 .contact-div{
   text-align: center;
   display:inline-block;
